--- a/style.css
+++ b/style.css
@@ -4,6 +4,46 @@
     padding: 0;
 }
 
+/*Inizio Header*/
+
 header > h1{
-    color: rgb(212, 45, 45);
+    color: rgb(54, 46, 46);
+    text-align: center;
+    font-size: 60px;
+    background-color: lightgrey;
 }
+
+/*Fine Header*/
+/*Inizio Nav*/
+
+nav{
+    background-color: rgb(54, 46, 46);
+}
+
+nav > button{
+    font-size: 15px;
+    margin: 10px;
+}
+
+/*Fine Nav*/
+/*Inizio Main*/
+
+section{
+    width: calc(100% / 3 - 20px);
+    margin: 10px;
+    border: 1px solid black;
+    float: left;
+}
+
+section > h2{
+    text-align: center;
+    margin: 15px;
+}
+
+main{
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/*Fine Main*/
