--- a/style.css
+++ b/style.css
@@ -47,3 +47,11 @@ main{
 }
 
 /*Fine Main*/
+/*Inizio Footer*/
+
+footer{
+    background-color: rgb(54, 46, 46);
+    color: white;
+    text-align: center;
+    font-style: italic;
+}
